[package]
name = "asansio"
version = "0.1.0"
edition = "2024"
authors = ["Pawel Pery"]
description = "The Async/await state machine for the sans-io design pattern"
license = "MIT OR Apache-2"
repository = "https://github.com/ewienik/asansio"
readme = "README.md"

[dependencies]

[dev-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
